--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -20,8 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d075ec8a-7c74-4b53-a3d0-5fa48c7ec6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Craigslist\n",
+    "path_craigslist = kagglehub.dataset_download(\"michaelbryantds/bay-area-craigslist-rentals\")\n",
+    "\n",
+    "# Germany\n",
+    "path_germany = kagglehub.dataset_download(\"corrieaar/apartment-rental-offers-in-germany\")\n",
+    "\n",
+    "# Poland\n",
+    "path_poland = kagglehub.dataset_download(\"krzysztofjamroz/apartment-prices-in-poland\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2778db55-4432-4571-adca-06b17855ce95",
    "metadata": {},
    "outputs": [],
    "source": []
