--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "id": "ce2294f5-60d8-4bab-b332-ed6ac63eaac7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "d075ec8a-7c74-4b53-a3d0-5fa48c7ec6ea",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "d9bd67aa-84df-4b9b-b0b3-1e51a49bf06f",
    "metadata": {},
    "outputs": [
@@ -117,9 +117,14 @@
     "df_poland_selected = df_poland[selected_columns_poland]\n",
     "#print(df_poland_selected)\n",
     "\n",
+    "\n",
     "# Exchange rate: 1 Złoty = 0.23 Euro\n",
     "zloty_euro_rate = 0.23\n",
     "df_poland['price_eur'] = df_poland['price'] * zloty_euro_rate\n",
+    "\n",
+    "# format balcony and elevator\n",
+    "df_poland['hasBalcony'] = df_poland['hasBalcony'].map({\"yes\": True, \"no\": False})\n",
+    "df_poland['hasElevator'] = df_poland['hasElevator'].map({\"yes\": True, \"no\": False})\n",
     "\n",
     "# Select and rename columns\n",
     "df_poland_cleaned = pd.DataFrame({\n",
@@ -145,19 +150,11 @@
     "# save to csv\n",
     "df_combined_rentals.to_csv('data/cleaned_apartments_rentals.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ba246fc-0dec-4499-8e87-49afd215a4d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
