--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "ce2294f5-60d8-4bab-b332-ed6ac63eaac7",
    "metadata": {},
    "outputs": [],
@@ -31,16 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "d075ec8a-7c74-4b53-a3d0-5fa48c7ec6ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.11), please consider upgrading to the latest version (0.3.12).\n",
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.11), please consider upgrading to the latest version (0.3.12).\n"
+     ]
+    }
+   ],
    "source": [
     "# Germany\n",
     "path_germany = kagglehub.dataset_download(\"corrieaar/apartment-rental-offers-in-germany\")\n",
     "germany_csvs = [f for f in os.listdir(path_germany) if f.endswith('.csv')]\n",
     "df_germany = pd.read_csv(os.path.join(path_germany, germany_csvs[0]))\n",
-    "\n",
     "\n",
     "# Poland\n",
     "path_poland = kagglehub.dataset_download(\"krzysztofjamroz/apartment-prices-in-poland\")\n",
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "d9bd67aa-84df-4b9b-b0b3-1e51a49bf06f",
    "metadata": {},
    "outputs": [
@@ -150,11 +158,51 @@
     "# save to csv\n",
     "df_combined_rentals.to_csv('data/cleaned_apartments_rentals.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "656bc279-4085-4737-b8cb-e168961d1840",
+   "metadata": {},
+   "source": [
+    "Dimensional Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7be858a2-1053-4917-b1e6-ade1345394ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Country Dimension\n",
+    "dim_country = pd.DataFrame({\n",
+    "    'Country': ['Germany', 'Poland'],\n",
+    "    'Currency': ['EUR', 'PLN'],\n",
+    "    'PurchasingPowerParity': [1.0, 0.8]\n",
+    "})\n",
+    "dim_country['CountryKey'] = dim_country.index + 1\n",
+    "\n",
+    "# Apartment Dimension\n",
+    "dim_apartment = df_combined_rentals[['size', 'number_of_rooms', 'balcony', 'construction_year', 'elevator', 'floor']].drop_duplicates().reset_index(drop=True)\n",
+    "\n",
+    "dim_apartment['ApartmentKey'] = dim_apartment.index + 1\n",
+    "\n",
+    "\n",
+    "# Date Dimension\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75ac2861-9b49-483f-971d-5dd6905e9802",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -168,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
