dimensional model created

--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "ce2294f5-60d8-4bab-b332-ed6ac63eaac7",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "import kagglehub\n",
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "d075ec8a-7c74-4b53-a3d0-5fa48c7ec6ea",
    "metadata": {},
    "outputs": [
@@ -54,14 +55,24 @@
     "path_poland = kagglehub.dataset_download(\"krzysztofjamroz/apartment-prices-in-poland\")\n",
     "poland_csvs = [f for f in os.listdir(path_poland) if f.endswith('.csv')]\n",
     "\n",
-    "# Filter only rental-related files\n",
+    "# Filter rental files only\n",
     "rental_files = [f for f in poland_csvs if 'apartments_rent_pl' in f.lower()]\n",
     "\n",
-    "# Load and combine them into a single DataFrame\n",
-    "df_poland = pd.concat(\n",
-    "    [pd.read_csv(os.path.join(path_poland, f)) for f in rental_files],\n",
-    "    ignore_index=True\n",
-    ")"
+    "# Load and combine with date column extracted from filename\n",
+    "poland_frames = []\n",
+    "\n",
+    "for f in rental_files:\n",
+    "    match = re.search(r'(\\d{4})_(\\d{2})', f)\n",
+    "    if match:\n",
+    "        year, month = match.groups()\n",
+    "        file_date = f'{year}-{month}-01'  # standardized to first of month\n",
+    "\n",
+    "        df = pd.read_csv(os.path.join(path_poland, f))\n",
+    "        df['date'] = pd.to_datetime(file_date)\n",
+    "        poland_frames.append(df)\n",
+    "\n",
+    "# Final combined DataFrame\n",
+    "df_poland = pd.concat(poland_frames, ignore_index=True)"
    ]
   },
   {
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "d9bd67aa-84df-4b9b-b0b3-1e51a49bf06f",
    "metadata": {},
    "outputs": [
@@ -107,6 +118,8 @@
     "    df_germany['baseRent'].fillna(0) + df_germany['serviceCharge'].fillna(0) + df_germany['heatingCosts'].fillna(0)\n",
     ")\n",
     "\n",
+    "df_germany['date'] = pd.to_datetime(df_germany['date'], format='%b%y')\n",
+    "\n",
     "# Select and rename columns\n",
     "df_germany_cleaned = pd.DataFrame({\n",
     "    'size': df_germany['livingSpace'],\n",
@@ -116,7 +129,7 @@
     "    'floor': df_germany['floor'],\n",
     "    'balcony': df_germany['balcony'],\n",
     "    'elevator': df_germany['lift'],\n",
-    "    'heating_type': df_germany['heatingType'],\n",
+    "    'date': df_germany['date'],\n",
     "    'country': 'Germany'\n",
     "})\n",
     "\n",
@@ -143,7 +156,7 @@
     "    'floor': df_poland['floor'],\n",
     "    'balcony': df_poland['hasBalcony'],\n",
     "    'elevator': df_poland['hasElevator'],\n",
-    "    'heating_type': np.nan,  # Poland dataset has no heatingType\n",
+    "    'date': df_poland['date'],\n",
     "    'country': 'Poland'\n",
     "})\n",
     "\n",
@@ -169,32 +182,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "7be858a2-1053-4917-b1e6-ade1345394ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Country Dimension\n",
     "dim_country = pd.DataFrame({\n",
-    "    'Country': ['Germany', 'Poland'],\n",
-    "    'Currency': ['EUR', 'PLN'],\n",
-    "    'PurchasingPowerParity': [1.0, 0.8]\n",
+    "    'country': ['Germany', 'Poland'],\n",
+    "    'currency': ['EUR', 'PLN'],\n",
+    "    'purchasing_power_parity': [1.0, 0.8]\n",
     "})\n",
     "dim_country['CountryKey'] = dim_country.index + 1\n",
     "\n",
     "# Apartment Dimension\n",
     "dim_apartment = df_combined_rentals[['size', 'number_of_rooms', 'balcony', 'construction_year', 'elevator', 'floor']].drop_duplicates().reset_index(drop=True)\n",
     "\n",
-    "dim_apartment['ApartmentKey'] = dim_apartment.index + 1\n",
+    "dim_apartment['apartmentKey'] = dim_apartment.index + 1\n",
     "\n",
     "\n",
-    "# Date Dimension\n"
+    "# Date Dimension\n",
+    "df_combined_rentals['date'] = pd.to_datetime(df_combined_rentals['date'])\n",
+    "\n",
+    "dim_date = df_combined_rentals[['date']].drop_duplicates().reset_index(drop=True)\n",
+    "\n",
+    "dim_date['dateKey'] = dim_date.index + 1\n",
+    "\n",
+    "dim_date = dim_date[['dateKey', 'date']]\n",
+    "\n",
+    "\n",
+    "# Rent Range Dimension\n",
+    "bins = [0, 500, 1000, 1500, 2000, float('inf')]\n",
+    "labels = ['<500', '500-1000', '1000-1500', '1500-2000', '>2000']\n",
+    "df_combined_rentals['rentRange'] = pd.cut(df_combined_rentals['total_rent'], bins=bins, labels=labels)\n",
+    "\n",
+    "dim_rent_category = pd.DataFrame({\n",
+    "    'rentRange': df_combined_rentals['rentRange'].dropna().unique()\n",
+    "})\n",
+    "dim_rent_category['RentCategoryKey'] = dim_rent_category.index + 1\n",
+    "\n",
+    "\n",
+    "# join Fact Table\n",
+    "df_fact = df_combined_rentals.merge(dim_country, on='country', how='left')\n",
+    "df_fact = df_fact.merge(dim_apartment, on=['size', 'number_of_rooms', 'balcony', 'construction_year', 'elevator', 'floor'], how='left')\n",
+    "df_fact = df_fact.merge(dim_date, on='date', how='left')\n",
+    "df_fact = df_fact.merge(dim_rent_category, on='RentRange', how='left')\n",
+    "\n",
+    "fact_offer = df_fact[['CountryKey', 'ApartmentKey', 'RentCategoryKey', 'DateKey', 'total_rent']]\n",
+    "fact_offer = df_fact[['CountryKey', 'ApartmentKey', 'RentCategoryKey', 'total_rent']]\n",
+    "fact_offer = fact_offer.rename(columns={'total_rent': 'RentAmount'})\n",
+    "\n",
+    "\n",
+    "output_dir = 'data/dimensional'\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "# Save dimension tables\n",
+    "dim_country.to_csv(f'{output_dir}/dim_country.csv', index=False)\n",
+    "dim_apartment.to_csv(f'{output_dir}/dim_apartment.csv', index=False)\n",
+    "dim_rent_category.to_csv(f'{output_dir}/dim_rent_category.csv', index=False)\n",
+    "\n",
+    "# If you have a dim_date table later:\n",
+    "# dim_date.to_csv(f'{output_dir}/dim_date.csv', index=False)\n",
+    "\n",
+    "# Save the fact table\n",
+    "fact_offer.to_csv(f'{output_dir}/fact_offer.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ac2861-9b49-483f-971d-5dd6905e9802",
+   "id": "e5a25d6e-ead0-4d45-b148-352f189e7b2f",
    "metadata": {},
    "outputs": [],
    "source": []
