--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -136,8 +136,6 @@
     "# Poland \n",
     "selected_columns_poland = ['squareMeters', 'rooms', 'hasBalcony', 'buildYear', 'price', 'floor', 'hasElevator']\n",
     "df_poland_selected = df_poland[selected_columns_poland]\n",
-    "#print(df_poland_selected)\n",
-    "\n",
     "\n",
     "# Exchange rate: 1 Złoty = 0.23 Euro\n",
     "zloty_euro_rate = 0.23\n",
@@ -160,13 +158,15 @@
     "    'country': 'Poland'\n",
     "})\n",
     "\n",
+    "# Remove outliers from Poland\n",
+    "df_poland_cleaned = df_poland_cleaned[\n",
+    "    (df_poland_cleaned['total_rent'] >= 300) &\n",
+    "    (df_poland_cleaned['number_of_rooms'] <= 10)\n",
+    "]\n",
+    "\n",
+    "\n",
     "# Combine both datasets\n",
     "df_combined_rentals = pd.concat([df_germany_cleaned, df_poland_cleaned], ignore_index=True)\n",
-    "\n",
-    "# Optional: preview\n",
-    "print(df_combined_rentals.shape)\n",
-    "df_combined_rentals.head()\n",
-    "\n",
     "\n",
     "# save to csv\n",
     "df_combined_rentals.to_csv('data/cleaned_apartments_rentals.csv', index=False)"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "7be858a2-1053-4917-b1e6-ade1345394ca",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
     "    'currency': ['EUR', 'PLN'],\n",
     "    'purchasing_power_parity': [1.0, 0.8]\n",
     "})\n",
-    "dim_country['CountryKey'] = dim_country.index + 1\n",
+    "dim_country['countryKey'] = dim_country.index + 1\n",
     "\n",
     "# Apartment Dimension\n",
     "dim_apartment = df_combined_rentals[['size', 'number_of_rooms', 'balcony', 'construction_year', 'elevator', 'floor']].drop_duplicates().reset_index(drop=True)\n",
@@ -219,31 +219,28 @@
     "dim_rent_category = pd.DataFrame({\n",
     "    'rentRange': df_combined_rentals['rentRange'].dropna().unique()\n",
     "})\n",
-    "dim_rent_category['RentCategoryKey'] = dim_rent_category.index + 1\n",
+    "dim_rent_category['rentCategoryKey'] = dim_rent_category.index + 1\n",
     "\n",
     "\n",
     "# join Fact Table\n",
     "df_fact = df_combined_rentals.merge(dim_country, on='country', how='left')\n",
     "df_fact = df_fact.merge(dim_apartment, on=['size', 'number_of_rooms', 'balcony', 'construction_year', 'elevator', 'floor'], how='left')\n",
     "df_fact = df_fact.merge(dim_date, on='date', how='left')\n",
-    "df_fact = df_fact.merge(dim_rent_category, on='RentRange', how='left')\n",
+    "df_fact = df_fact.merge(dim_rent_category, on='rentRange', how='left')\n",
     "\n",
-    "fact_offer = df_fact[['CountryKey', 'ApartmentKey', 'RentCategoryKey', 'DateKey', 'total_rent']]\n",
-    "fact_offer = df_fact[['CountryKey', 'ApartmentKey', 'RentCategoryKey', 'total_rent']]\n",
-    "fact_offer = fact_offer.rename(columns={'total_rent': 'RentAmount'})\n",
+    "fact_offer = df_fact[['countryKey', 'apartmentKey', 'rentCategoryKey', 'dateKey', 'total_rent']]\n",
+    "fact_offer = df_fact[['countryKey', 'apartmentKey', 'rentCategoryKey', 'total_rent']]\n",
+    "fact_offer = fact_offer.rename(columns={'total_rent': 'rentAmount'})\n",
     "\n",
     "\n",
     "output_dir = 'data/dimensional'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
-    "# Save dimension tables\n",
+    "\n",
     "dim_country.to_csv(f'{output_dir}/dim_country.csv', index=False)\n",
     "dim_apartment.to_csv(f'{output_dir}/dim_apartment.csv', index=False)\n",
     "dim_rent_category.to_csv(f'{output_dir}/dim_rent_category.csv', index=False)\n",
+    "dim_date.to_csv(f'{output_dir}/dim_date.csv', index=False)\n",
     "\n",
-    "# If you have a dim_date table later:\n",
-    "# dim_date.to_csv(f'{output_dir}/dim_date.csv', index=False)\n",
-    "\n",
-    "# Save the fact table\n",
     "fact_offer.to_csv(f'{output_dir}/fact_offer.csv', index=False)"
    ]
   },
