--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -13,24 +13,7 @@
    "execution_count": 1,
    "id": "ce2294f5-60d8-4bab-b332-ed6ac63eaac7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jakse\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "C:\\Users\\jakse\\AppData\\Local\\Temp\\ipykernel_12724\\4051799869.py:3: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kagglehub\n",
     "import os\n",
@@ -52,7 +35,16 @@
    "execution_count": 2,
    "id": "d075ec8a-7c74-4b53-a3d0-5fa48c7ec6ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.11), please consider upgrading to the latest version (0.3.12).\n",
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.11), please consider upgrading to the latest version (0.3.12).\n"
+     ]
+    }
+   ],
    "source": [
     "# Germany\n",
     "path_germany = kagglehub.dataset_download(\"corrieaar/apartment-rental-offers-in-germany\")\n",
@@ -111,7 +103,6 @@
     "selected_columns_germany = ['livingSpace', 'noRooms', 'balcony', 'heatingType', 'yearConstructed',\n",
     "                           'totalRent', 'baseRent', 'serviceCharge', 'heatingCosts', 'date', 'floor', 'lift'] \n",
     "df_germany_selected = df_germany[selected_columns_germany]\n",
-    "#print(df_germany_selected)\n",
     "\n",
     "# Fill missing totalRent with baseRent + serviceCharge + heatingCosts\n",
     "df_germany['totalRent'] = df_germany['totalRent'].fillna(\n",
@@ -132,6 +123,12 @@
     "    'date': df_germany['date'],\n",
     "    'country': 'Germany'\n",
     "})\n",
+    "\n",
+    "# Remove outliers from germany\n",
+    "df_germany_cleaned = df_germany_cleaned[\n",
+    "    (df_germany_cleaned['total_rent'] >= 300) &\n",
+    "    (df_germany_cleaned['number_of_rooms'] <= 10)\n",
+    "]\n",
     "\n",
     "# Poland \n",
     "selected_columns_poland = ['squareMeters', 'rooms', 'hasBalcony', 'buildYear', 'price', 'floor', 'hasElevator']\n",
@@ -242,19 +239,11 @@
     "\n",
     "fact_offer.to_csv(f'{output_dir}/fact_offer.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5a25d6e-ead0-4d45-b148-352f189e7b2f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
