--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -165,6 +165,9 @@
     "# Combine both datasets\n",
     "df_combined_rentals = pd.concat([df_germany_cleaned, df_poland_cleaned], ignore_index=True)\n",
     "\n",
+    "# Keep only rows where number_of_rooms is a whole number\n",
+    "df_combined_rentals = df_combined_rentals[df_combined_rentals['number_of_rooms'] % 1 == 0]\n",
+    "\n",
     "# save to csv\n",
     "df_combined_rentals.to_csv('data/cleaned_apartments_rentals.csv', index=False)"
    ]
