removed non int rooms

--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "ce2294f5-60d8-4bab-b332-ed6ac63eaac7",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "d075ec8a-7c74-4b53-a3d0-5fa48c7ec6ea",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "d9bd67aa-84df-4b9b-b0b3-1e51a49bf06f",
    "metadata": {},
    "outputs": [],
@@ -124,12 +124,6 @@
     "    'country': 'Germany'\n",
     "})\n",
     "\n",
-    "# Remove outliers from germany\n",
-    "df_germany_cleaned = df_germany_cleaned[\n",
-    "    (df_germany_cleaned['total_rent'] >= 300) &\n",
-    "    (df_germany_cleaned['number_of_rooms'] <= 10)\n",
-    "]\n",
-    "\n",
     "# Poland \n",
     "selected_columns_poland = ['squareMeters', 'rooms', 'hasBalcony', 'buildYear', 'price', 'floor', 'hasElevator']\n",
     "df_poland_selected = df_poland[selected_columns_poland]\n",
@@ -155,17 +149,15 @@
     "    'country': 'Poland'\n",
     "})\n",
     "\n",
-    "# Remove outliers from Poland\n",
-    "df_poland_cleaned = df_poland_cleaned[\n",
-    "    (df_poland_cleaned['total_rent'] >= 300) &\n",
-    "    (df_poland_cleaned['number_of_rooms'] <= 10)\n",
-    "]\n",
-    "\n",
-    "\n",
     "# Combine both datasets\n",
     "df_combined_rentals = pd.concat([df_germany_cleaned, df_poland_cleaned], ignore_index=True)\n",
     "\n",
-    "# Keep only rows where number_of_rooms is a whole number\n",
+    "# Cleaning Data\n",
+    "df_combined_rentals = df_combined_rentals[\n",
+    "    (df_combined_rentals['total_rent'] >= 300) &\n",
+    "    (df_combined_rentals['number_of_rooms'] <= 10)\n",
+    "]\n",
+    "\n",
     "df_combined_rentals = df_combined_rentals[df_combined_rentals['number_of_rooms'] % 1 == 0]\n",
     "\n",
     "# save to csv\n",
@@ -182,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "7be858a2-1053-4917-b1e6-ade1345394ca",
    "metadata": {},
    "outputs": [],
@@ -242,6 +234,14 @@
     "\n",
     "fact_offer.to_csv(f'{output_dir}/fact_offer.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1d3a9ab-40b1-49c6-90bd-8cea429cd04e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
