--- a/Assinment1.ipynb
+++ b/Assinment1.ipynb
@@ -10,10 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ce2294f5-60d8-4bab-b332-ed6ac63eaac7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jakse\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "C:\\Users\\jakse\\AppData\\Local\\Temp\\ipykernel_13276\\4051799869.py:3: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import kagglehub\n",
     "import os\n",
@@ -32,19 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d075ec8a-7c74-4b53-a3d0-5fa48c7ec6ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.11), please consider upgrading to the latest version (0.3.12).\n",
-      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.11), please consider upgrading to the latest version (0.3.12).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Germany\n",
     "path_germany = kagglehub.dataset_download(\"corrieaar/apartment-rental-offers-in-germany\")\n",
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d9bd67aa-84df-4b9b-b0b3-1e51a49bf06f",
    "metadata": {},
    "outputs": [],
@@ -155,7 +163,8 @@
     "# Cleaning Data\n",
     "df_combined_rentals = df_combined_rentals[\n",
     "    (df_combined_rentals['total_rent'] >= 300) &\n",
-    "    (df_combined_rentals['number_of_rooms'] <= 10)\n",
+    "    (df_combined_rentals['number_of_rooms'] <= 10) &\n",
+    "    (df_combined_rentals['total_rent'] <= 20_000)\n",
     "]\n",
     "\n",
     "df_combined_rentals = df_combined_rentals[df_combined_rentals['number_of_rooms'] % 1 == 0]\n",
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7be858a2-1053-4917-b1e6-ade1345394ca",
    "metadata": {},
    "outputs": [],
@@ -246,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
